# STREET_FIGHT_2D

./: .gitignore  CMakeLists.txt  main.cpp
src/: CombatSystem.cpp  CombatSystem.h  CombatTypes.h  Facing.h  Fighter.cpp  Fighter.h  FighterCombatData.h  FighterController.cpp  FighterController.h  FighterState.h  FighterStateMachine.cpp  FighterStateMachine.h  GlfwContext.h  Input.cpp  Input.h  Level.cpp  Level.h  Match.cpp  Match.h  Physics.cpp  Physics.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Shader.cpp  Shader.h  Window.cpp  Window.h  see.py
src/Animation/: Animation.h  AnimationComponent.cpp  AnimationComponent.h  AnimationFrame.h  AnimationSystem.cpp  AssetManager.cpp  AssetManager.h  FighterAnimationData.h
src/Assets/: triangle.frag  triangle.vert
src/Assets/Shaders/: triangle.frag  triangle.vert
src/Core/: GameTime.cpp  GameTime.h  Input.cpp  Match.cpp  Match.h  Stage.cpp  Stage.h  Transform.h
src/Fighter/: CharacterData.h  CharacterPresets.cpp  CharacterPresets.h  Fighter.cpp  Fighter.h  FighterCommand.h  FighterController.cpp  FighterPhysicsData.h  FighterState.h
src/Graphics/: QuadMesh.cpp  QuadMesh.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  TriangleMesh.cpp  TriangleMesh.h
src/Platform/: GlfwContext.cpp
src/Systems/: AnimationPlayer.cpp  AnimationPlayer.h  AnimationSystem.cpp  AnimationSystem.h  CombatSystem.cpp  FighterPushboxSystem.cpp  FighterPushboxSystem.h  FighterStateMachine.cpp  FighterStateMachine.h  Physics.cpp  Physics.h
